# intellirank-ai

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  verify_intellirank.mjs  verify_layout_arch.mjs  verify_responsive.mjs
docs/: ARCHITECTURE.md
intellirank/: __init__.py  config.py  constants.py  logger.py  pipeline.py  submission.py  types.py
intellirank/cleaning/: __init__.py  pipeline.py
intellirank/dataset/: __init__.py  loader.py  reader.py  validator.py
intellirank/features/: __init__.py  behavioral_intelligence.py  candidate_potential.py  career_intelligence.py  corpus_stats.py  domain_intelligence.py  education_intelligence.py  experience_intelligence.py  extractor.py  learning_intelligence.py  profile_quality.py  recruitability.py  skill_intelligence.py
intellirank/ranking/: __init__.py  explainability.py  ranker.py  scorer.py
intellirank/utils/: __init__.py  date_utils.py  math_utils.py  text_utils.py
src/: App.tsx  index.css  main.tsx
src/api/: client.ts  rankings.ts
src/components/: ComparisonView.module.css  ComparisonView.tsx  DecisionSupport.module.css  DecisionSupport.tsx  DetailPanel.module.css  DetailPanel.tsx  DimensionCard.tsx  EvidenceViewer.tsx  ExplainabilityPanel.module.css  ExplainabilityPanel.tsx  HiddenGemsView.module.css  HiddenGemsView.tsx  InfoTooltip.tsx  KeyboardShortcuts.tsx  (+10 more)
tests/: test_phase1_foundation.py  test_phase2_dataset.py  test_phase3_cleaning.py  test_phase4_features.py  test_phase5_ranking.py  test_phase6_pipeline.py  test_phase7_submission.py
(+71 files in other folders)
