[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intellirank"
version = "1.0.0"
description = "Explainable AI Hiring Intelligence Platform — Redrob AI Hackathon"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "orjson>=3.9",
    "tqdm>=4.66",
    "rich>=13.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intellirank*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
strict = true
